# asciiflow

./: .bazelrc  .gitignore  CLAUDE.md  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml  ts_library.bzl
.github/workflows/: deploy.yaml  test.yaml
bazel/: BUILD  playwright-runner.mjs  playwright.bzl  resolve-extensions-loader.mjs  static-server.mjs
client/: BUILD  app.tsx  constants.ts  controller.ts  drawer.module.css  drawer.tsx  export.module.css  export.tsx  index.html  layer.spec.ts  toolbar.module.css  toolbar.tsx  view.tsx
client/store/: canvas.ts  index.ts  store.spec.ts
common/: BUILD
e2e/: BUILD  app.spec.js  playwright.config.mjs
site/: BUILD
site/legacy/: bundle.js  index.html
testing/: BUILD  test_setup.ts
