module(name = "asciiflow", version = "0.1")

bazel_dep(name = "bazel_features", version = "1.41.0")

bazel_dep(name = "rules_nodejs", version = "6.7.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

node.toolchain(node_version = "22.12.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

bazel_dep(name = "aspect_rules_js", version = "2.3.7")

bazel_dep(name = "aspect_rules_ts", version = "3.5.1")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "aspect_rules_esbuild", version = "0.24.0")
